--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "flag-icons": "^6.1.1"
   },
   "devDependencies": {
-    "cypress": "^9.5.3"
+    "cypress": "^9.5.3",
+    "eslint": "^8.31.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-import": "^2.26.0"
   }
 }
