--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "cypress-run": "cypress open"
+    "cypress-run": "cypress open",
+    "server-start": "http-server -p 5500"  
   },
   "keywords": [],
   "author": "",
